just changed to dense fixed

--- a/notebooks/Results_Final.ipynb
+++ b/notebooks/Results_Final.ipynb
@@ -345,6 +345,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for key in ('test_misclass', 'test_sensitivity', 'test_specificity', 'test_sample_misclass'):\n",
+    "    val = np.mean(df[(df.model_name == 'linear')][key]) * 100\n",
+    "    if 'misclass' in key:\n",
+    "        val = 100 - val\n",
+    "    print(np.round(val,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reduced_df = df.copy()\n",
     "for col in reduced_df.columns:\n",
     "    if 'train_' in col or 'valid_' in col or 'auc_' in col:\n",
