--- a/notebooks/Results_Input_Length.ipynb
+++ b/notebooks/Results_Input_Length.ipynb
@@ -323,7 +323,7 @@
     "df = df[df.input_time_length == 6000]\n",
     "df = df.fillna('-')\n",
     "df = df.drop('seed', axis=1)\n",
-    "df = df.drop(['n_chan_factor', 'final_conv_length', 'n_start_chans'], axis=1)\n",
+    "df = df.drop(['n_chan_factor', 'final_conv_length', 'n_start_chans','save_folder'], axis=1)\n",
     "df = df[df.n_recordings == 3000]\n",
     "df = remove_columns_with_same_value(df)\n",
     "\n",
@@ -338,6 +338,19 @@
    "source": [
     "for key in ('test_misclass', 'test_sensitivity', 'test_specificity', 'test_sample_misclass'):\n",
     "    val = np.mean(df[(df.model_name == 'deep')][key]) * 100\n",
+    "    if 'misclass' in key:\n",
+    "        val = 100 - val\n",
+    "    print(np.round(val,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in ('test_misclass', 'test_sensitivity', 'test_specificity', 'test_sample_misclass'):\n",
+    "    val = np.mean(df[(df.model_name == 'shallow')][key]) * 100\n",
     "    if 'misclass' in key:\n",
     "        val = 100 - val\n",
     "    print(np.round(val,1))"
